--- a/goals.html
+++ b/goals.html
@@ -4,16 +4,13 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Goals — Victor Licona</title>
-  <meta name="description" content="Victor Licona — goals across cybersecurity, business, and personal growth." />
+  <meta name="description" content="Victor Licona — goals in cybersecurity, business, and personal growth." />
   <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
   <div class="container">
-    <nav class="nav">
-      <div class="brand">
-        <strong>Victor Licona</strong>
-        <span>Goals</span>
-      </div>
+    <nav class="nav fadeIn">
+      <div class="brand"><strong>Victor Licona</strong><span>Goals</span></div>
       <div class="links">
         <a href="./index.html">Home</a>
         <a href="./about.html">About</a>
@@ -23,86 +20,54 @@
       </div>
     </nav>
 
-    <section class="hero">
-      <h1 class="h1">Goals</h1>
-      <p class="sub">
-        What I’m building toward in the next chapters: career, business, and personal growth.
-      </p>
-
-      <div class="badges">
-        <div class="badge">Cybersecurity</div>
-        <div class="badge">Business systems</div>
-        <div class="badge">Consistency & discipline</div>
+    <section class="hero fadeIn">
+      <div class="heroInner">
+        <div class="spark"></div>
+        <h1 class="h1">Goals</h1>
+        <p class="sub">My targets across cybersecurity, TechBuddy, and personal growth.</p>
+        <div class="tags">
+          <div class="tag">Cybersecurity path</div>
+          <div class="tag">Consistent lead flow</div>
+          <div class="tag">Discipline</div>
+        </div>
       </div>
     </section>
 
-    <div class="grid">
+    <div class="grid fadeIn">
       <section class="card">
-        <h2>Career (Cybersecurity)</h2>
+        <h2>Cybersecurity</h2>
         <ul class="list">
-          <li class="item">
-            <strong>Education path</strong>
-            <span>Attend Tarrant County College (TCC) for an Associate’s in Cybersecurity, then continue with certifications.</span>
-          </li>
-          <li class="item">
-            <strong>Skill goals</strong>
-            <span>Networking fundamentals, system administration basics, security concepts, hands-on labs, and real-world reps.</span>
-          </li>
-          <li class="item">
-            <strong>Work goal</strong>
-            <span>Build experience in IT/security roles while sharpening depth and professionalism.</span>
-          </li>
+          <li class="item"><strong>Education path</strong><span>TCC for an Associate’s in Cybersecurity, then certifications.</span></li>
+          <li class="item"><strong>Hands-on skill growth</strong><span>Networking fundamentals, systems, labs, and real-world reps.</span></li>
+          <li class="item"><strong>Career momentum</strong><span>Build experience in IT/security while sharpening depth and professionalism.</span></li>
         </ul>
       </section>
 
       <aside class="card">
-        <h2>Business (TechBuddy)</h2>
+        <h2>TechBuddy</h2>
         <ul class="list">
-          <li class="item">
-            <strong>Reputation & trust</strong>
-            <span>Be the “go-to” tech person: reliable, clear, bilingual, and safe.</span>
-          </li>
-          <li class="item">
-            <strong>Lead flow</strong>
-            <span>Consistent local leads without relying on luck—systems, reviews, and referrals.</span>
-          </li>
-          <li class="item">
-            <strong>Operations</strong>
-            <span>Keep everything organized: process, scheduling, documentation, and clean finances.</span>
-          </li>
+          <li class="item"><strong>Trust + reputation</strong><span>Be the go-to tech person: reliable, bilingual, safe.</span></li>
+          <li class="item"><strong>Lead system</strong><span>Consistent leads through reviews, referrals, and process (not luck).</span></li>
+          <li class="item"><strong>Operations</strong><span>Clean tracking, clear workflows, strong communication.</span></li>
         </ul>
       </aside>
     </div>
 
-    <section class="card">
+    <section class="card fadeIn">
       <h2>Personal</h2>
       <ul class="list">
-        <li class="item">
-          <strong>Discipline</strong>
-          <span>Build habits that stick: fitness, learning, and consistent execution.</span>
-        </li>
-        <li class="item">
-          <strong>Leadership</strong>
-          <span>Serve well—especially in church responsibilities—and lead with integrity.</span>
-        </li>
-        <li class="item">
-          <strong>Balance without becoming average</strong>
-          <span>Go hard, but stay structured so progress doesn’t collapse.</span>
-        </li>
+        <li class="item"><strong>Discipline</strong><span>Habits that stick: fitness, learning, consistent execution.</span></li>
+        <li class="item"><strong>Leadership</strong><span>Serve well and lead with integrity, especially in church responsibilities.</span></li>
+        <li class="item"><strong>Go hard, stay structured</strong><span>High effort without chaos—systems that protect progress.</span></li>
       </ul>
     </section>
 
-    <div class="footer">
+    <div class="footer fadeIn">
       <div>© <span id="y"></span> Victor Licona</div>
-      <div class="smalllinks">
-        <a href="./work.html">Work</a>
-        <a href="./contact.html">Contact</a>
-      </div>
+      <div class="smalllinks"><a href="./work.html">Work</a><a href="./contact.html">Contact</a></div>
     </div>
   </div>
 
-  <script>
-    document.getElementById("y").textContent = new Date().getFullYear();
-  </script>
+  <script>document.getElementById("y").textContent=new Date().getFullYear();</script>
 </body>
 </html>
