--- a/contact.html
+++ b/contact.html
@@ -9,11 +9,8 @@
 </head>
 <body>
   <div class="container">
-    <nav class="nav">
-      <div class="brand">
-        <strong>Victor Licona</strong>
-        <span>Contact</span>
-      </div>
+    <nav class="nav fadeIn">
+      <div class="brand"><strong>Victor Licona</strong><span>Contact</span></div>
       <div class="links">
         <a href="./index.html">Home</a>
         <a href="./about.html">About</a>
@@ -23,54 +20,49 @@
       </div>
     </nav>
 
-    <section class="hero">
-      <h1 class="h1">Contact</h1>
-      <p class="sub">Email or text is the fastest way to reach me.</p>
+    <section class="hero fadeIn">
+      <div class="heroInner">
+        <div class="spark"></div>
+        <h1 class="h1">Contact</h1>
+        <p class="sub">Email or text is the fastest way to reach me.</p>
 
-      <div class="btnrow">
-        <a class="btn green" href="mailto:contact@victorlicona.com">contact@victorlicona.com</a>
-        <a class="btn" href="tel:+12142706884">Call: (214) 270-6884</a>
-        <a class="btn primary" href="sms:+12142706884">Text me</a>
-      </div>
+        <div class="btnRow">
+          <a class="btn primary" href="mailto:contact@victorlicona.com">Email: contact@victorlicona.com</a>
+          <a class="btn green" href="sms:+12142706884">Text: (214) 270-6884</a>
+          <a class="btn" href="tel:+12142706884">Call</a>
+        </div>
 
-      <div class="badges">
-        <div class="badge">For TechBuddy: include device + issue</div>
-        <div class="badge">For collabs: include goal + timeline</div>
+        <div class="tags">
+          <div class="tag">TechBuddy: include device + issue</div>
+          <div class="tag">Collab: include goal + timeline</div>
+        </div>
       </div>
     </section>
 
-    <section class="card">
+    <section class="card fadeIn">
       <h2>Message template (copy/paste)</h2>
       <ul class="list">
-        <li class="item"><strong>Name:</strong><span>…</span></li>
-        <li class="item"><strong>Reason:</strong><span>Tech help / collaboration / question</span></li>
-        <li class="item"><strong>Details:</strong><span>Device + what’s happening (or the project idea)</span></li>
-        <li class="item"><strong>Timeline:</strong><span>When you need it</span></li>
+        <li class="item"><strong>Name</strong><span>…</span></li>
+        <li class="item"><strong>Reason</strong><span>Tech help / collaboration / question</span></li>
+        <li class="item"><strong>Details</strong><span>Device + what’s happening (or the project idea)</span></li>
+        <li class="item"><strong>Timeline</strong><span>When you need it</span></li>
       </ul>
 
       <hr class="hr"/>
 
       <h2>Social</h2>
-      <p class="muted" style="margin:0;">
-        Add your profiles when you’re ready:
-      </p>
-      <div class="btnrow">
-        <a class="btn" href="#" title="Add your LinkedIn URL here">LinkedIn (placeholder)</a>
-        <a class="btn" href="#" title="Add your Instagram URL here">Instagram (placeholder)</a>
+      <div class="btnRow">
+        <a class="btn" href="#" title="Replace with your LinkedIn URL">LinkedIn (placeholder)</a>
+        <a class="btn" href="#" title="Replace with your Instagram URL">Instagram (placeholder)</a>
       </div>
     </section>
 
-    <div class="footer">
+    <div class="footer fadeIn">
       <div>© <span id="y"></span> Victor Licona</div>
-      <div class="smalllinks">
-        <a href="./index.html">Home</a>
-        <a href="./work.html">Work</a>
-      </div>
+      <div class="smalllinks"><a href="./index.html">Home</a><a href="./work.html">Work</a></div>
     </div>
   </div>
 
-  <script>
-    document.getElementById("y").textContent = new Date().getFullYear();
-  </script>
+  <script>document.getElementById("y").textContent=new Date().getFullYear();</script>
 </body>
 </html>
